--- a/Example/EggCustomDialog/Base.lproj/Main.storyboard
+++ b/Example/EggCustomDialog/Base.lproj/Main.storyboard
@@ -19,22 +19,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IM-Of-7nK">
-                                <rect key="frame" x="69" y="92" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Example" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IM-Of-7nK">
+                                <rect key="frame" x="137.5" y="16" width="100" height="30"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHP-zh-PZR">
-                                <rect key="frame" x="69" y="466" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="OFN-LK-wBN">
+                                <rect key="frame" x="58" y="78" width="259" height="557"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uf7-Hh-hIq">
+                                        <rect key="frame" x="0.0" y="0.0" width="259" height="69.5"/>
+                                        <state key="normal" title="show_title_only"/>
+                                        <connections>
+                                            <action selector="showTitleOnly:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FEH-Vt-SQr"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ail-hs-txg">
+                                        <rect key="frame" x="0.0" y="69.5" width="259" height="70"/>
+                                        <state key="normal" title="show_message_only"/>
+                                        <connections>
+                                            <action selector="showMessageOnly:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nnM-BU-Hlh"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EoI-cm-z1P">
+                                        <rect key="frame" x="0.0" y="139.5" width="259" height="69.5"/>
+                                        <state key="normal" title="show_title_message"/>
+                                        <connections>
+                                            <action selector="showTitleMessage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="kvJ-rb-w26"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qdn-t0-Vjl">
+                                        <rect key="frame" x="0.0" y="209" width="259" height="69.5"/>
+                                        <state key="normal" title="show_small_image"/>
+                                        <connections>
+                                            <action selector="showSmallImage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="IL2-02-vDV"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="46W-bl-HBU">
+                                        <rect key="frame" x="0.0" y="278.5" width="259" height="69.5"/>
+                                        <state key="normal" title="show_large_image"/>
+                                        <connections>
+                                            <action selector="showLargeImage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dFT-Ig-6wf"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pBr-YN-p2g">
+                                        <rect key="frame" x="0.0" y="348" width="259" height="70"/>
+                                        <state key="normal" title="show_large_image_with_title_message"/>
+                                        <connections>
+                                            <action selector="showLargeImageWithTitleMessage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Gxg-FU-doc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BdG-MO-fqx">
+                                        <rect key="frame" x="0.0" y="418" width="259" height="69.5"/>
+                                        <state key="normal" title="show_small_image_with_title_message"/>
+                                        <connections>
+                                            <action selector="showSmallImageWithTitleMessage:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="iKF-1k-eZS"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rjs-8s-iTC">
+                                        <rect key="frame" x="0.0" y="487.5" width="259" height="69.5"/>
+                                        <state key="normal" title="show_one_button"/>
+                                        <connections>
+                                            <action selector="showOneButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7B9-TL-FQi"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8IM-Of-7nK" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="2mI-gK-W2t"/>
+                            <constraint firstItem="OFN-LK-wBN" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="Qlk-dK-L6O"/>
+                            <constraint firstItem="8IM-Of-7nK" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="16" id="aco-Ye-vES"/>
+                            <constraint firstItem="OFN-LK-wBN" firstAttribute="top" secondItem="8IM-Of-7nK" secondAttribute="bottom" constant="32" id="uwc-9M-MTr"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="OFN-LK-wBN" secondAttribute="bottom" constant="32" id="wyD-2g-HZj"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
